--- a/notebooks/project.ipynb
+++ b/notebooks/project.ipynb
@@ -289,11 +289,198 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "# DL"
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": null,
    "metadata": {},
    "outputs": [],
-   "source": []
+   "source": [
+    "import os\n",
+    "from typing import Optional\n",
+    "import pandas as pd\n",
+    "import pretty_errors\n",
+    "import torch\n",
+    "from pytorch_lightning import LightningDataModule\n",
+    "from torch.utils.data import DataLoader, Dataset, random_split\n",
+    "from transformers import RobertaTokenizerFast\n",
+    "from transformers.models.auto.tokenization_auto import AutoTokenizer\n",
+    "from sklearn.model_selection import train_test_split\n",
+    "import torch\n",
+    "from pytorch_lightning import LightningModule\n",
+    "from torch.nn import Dropout, Linear, Module, ReLU, Sequential, Sigmoid\n",
+    "from torch.nn.modules.loss import BCEWithLogitsLoss, BCELoss,CrossEntropyLoss\n",
+    "from torch.optim import Adam\n",
+    "from torch.optim.lr_scheduler import ReduceLROnPlateau\n",
+    "from torchmetrics.functional import f1\n",
+    "from transformers.models.auto.modeling_auto import AutoModelForSequenceClassification\n",
+    "from torch.nn.functional import sigmoid, one_hot\n",
+    "import logging as log\n",
+    "import os\n",
+    "import warnings\n",
+    "\n",
+    "from pytorch_lightning import Trainer, seed_everything\n",
+    "from pytorch_lightning.callbacks.early_stopping import EarlyStopping\n",
+    "from pytorch_lightning.callbacks.lr_monitor import LearningRateMonitor\n",
+    "from pytorch_lightning.callbacks.model_checkpoint import ModelCheckpoint\n",
+    "from pytorch_lightning.loggers import TensorBoardLogger\n",
+    "from transformers import logging\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "class BaseDataset(Dataset):\n",
+    "    def __init__(\n",
+    "        self,\n",
+    "        model_name: str = None,\n",
+    "        data_frame: str = None,\n",
+    "    ):\n",
+    "        self.tokenizer = AutoTokenizer.from_pretrained(model_name)\n",
+    "        self.data = data_frame\n",
+    "\n",
+    "    def __getitem__(self, idx):\n",
+    "        text = self.data['review'][idx]\n",
+    "        label = self.data['rating'][idx]\n",
+    "        text = self.tokenizer.encode_plus(\n",
+    "            text,\n",
+    "            # add_special_tokens=True,\n",
+    "            max_length=512,\n",
+    "            padding=\"max_length\",\n",
+    "            # return_tensors=\"pt\",\n",
+    "            return_attention_mask=True,\n",
+    "            truncation=True,\n",
+    "        )\n",
+    "        return {\n",
+    "            \"ids\": torch.tensor(text[\"input_ids\"], dtype=torch.long),\n",
+    "            \"mask\": torch.tensor(text[\"attention_mask\"], dtype=torch.long),\n",
+    "            \"labels\": torch.tensor(int(label), dtype=torch.long),\n",
+    "        }\n",
+    "\n",
+    "    def __len__(self):\n",
+    "        return len(self.data)\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "class DataModule(LightningDataModule):\n",
+    "    def __init__(\n",
+    "        self,\n",
+    "        num_workers: int = 8,\n",
+    "        batch_size: int = 2,\n",
+    "        model_name: str = None,\n",
+    "        data_path: str = None,\n",
+    "    ):\n",
+    "        super().__init__()\n",
+    "\n",
+    "        self.num_workers = num_workers\n",
+    "        self.batch_size = batch_size\n",
+    "        self.model_name = model_name\n",
+    "        self.data = pd.read_csv(data_path)\n",
+    "        self.train, self.val = None, None\n",
+    "\n",
+    "    def setup(self, stage: Optional[str] = None) -> None:\n",
+    "        self.train, self.val = train_test_split(self.data, test_size=0.2, stratify=self.data['rating'])\n",
+    "\n",
+    "    def train_dataloader(self) -> DataLoader:\n",
+    "        return DataLoader(\n",
+    "            BaseDataset(data_frame=self.train.reset_index(drop=True), model_name=self.model_name),\n",
+    "            batch_size=self.batch_size,\n",
+    "            num_workers=self.num_workers,\n",
+    "            pin_memory=True,\n",
+    "        )\n",
+    "\n",
+    "    def val_dataloader(self) -> DataLoader:\n",
+    "        return DataLoader(\n",
+    "            BaseDataset(data_frame=self.val.reset_index(drop=True), model_name=self.model_name),\n",
+    "            batch_size=self.batch_size,\n",
+    "            num_workers=self.num_workers,\n",
+    "            pin_memory=True,\n",
+    "        )\n",
+    "\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "class BaseBert(LightningModule):\n",
+    "    def __init__(self, model=None, n_classes: int = None) -> None:\n",
+    "        super().__init__()\n",
+    "        self.n_classes = n_classes\n",
+    "        self.lr = 0.003\n",
+    "        self.bert = AutoModelForSequenceClassification.from_pretrained(model, num_labels=n_classes)\n",
+    "        # print(self.bert)\n",
+    "        self.criterion = CrossEntropyLoss()\n",
+    "        self.freeze_model(self.bert.bert)\n",
+    "\n",
+    "    def freeze_model(self, model):\n",
+    "        for param in model.parameters():\n",
+    "            param.requires_grad = False\n",
+    "\n",
+    "    def forward(self, ids, mask):\n",
+    "        out = self.bert(input_ids=ids, attention_mask=mask)\n",
+    "        # out = torch.sigmoid(out)\n",
+    "        return out\n",
+    "\n",
+    "    def configure_optimizers(self):\n",
+    "        optimizer = Adam(self.bert.parameters(), lr=self.lr)\n",
+    "        return {\n",
+    "            \"optimizer\": optimizer\n",
+    "        }\n",
+    "\n",
+    "    def training_step(self, batch, _):\n",
+    "        ids, mask, labels = batch[\"ids\"], batch[\"mask\"], batch[\"labels\"]\n",
+    "        output = self(ids, mask)\n",
+    "        output = output[0]\n",
+    "        loss = self.criterion(output, labels)\n",
+    "        self.log(\"train/loss\", loss, prog_bar=True, on_epoch=True, on_step=False)\n",
+    "        return loss\n",
+    "\n",
+    "    def validation_step(self, batch, _):\n",
+    "        ids, mask, labels = batch[\"ids\"], batch[\"mask\"], batch[\"labels\"]\n",
+    "        output = self(ids, mask)\n",
+    "        loss = self.criterion(output, labels)\n",
+    "        f1_score = f1(torch.argmax(output), labels.int(), average=\"macro\", num_classes=self.n_classes)\n",
+    "        return {\"loss\": loss, \"f1\": f1_score}\n",
+    "\n",
+    "    def validation_epoch_end(self, out):\n",
+    "        loss = torch.stack([x[\"loss\"] for x in out]).mean()\n",
+    "        f1_score = torch.stack([x[\"f1\"] for x in out]).mean()\n",
+    "        self.log(\"val/val_loss\", loss, on_epoch=True, on_step=False)\n",
+    "        self.log(\"val/val_f1\", f1_score, on_epoch=True, on_step=False)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "MODEL='microsoft/BiomedNLP-PubMedBERT-base-uncased-abstract-fulltext'\n",
+    "data = DataModule(data_path=r'../data/drugs_train.csv', model_name=MODEL)\n",
+    "\n",
+    "model = BaseBert(model=MODEL, n_classes=10)\n",
+    "trainer = Trainer(\n",
+    "        gpus=1,\n",
+    "        max_epochs=1,\n",
+    "    )\n",
+    "trainer.fit(model, datamodule=data)"
+   ]
   }
  ],
  "metadata": {
