--- a/notebooks/project.ipynb
+++ b/notebooks/project.ipynb
@@ -434,8 +434,7 @@
     "\n",
     "    def forward(self, ids, mask):\n",
     "        out = self.bert(input_ids=ids, attention_mask=mask)\n",
-    "        # out = torch.sigmoid(out)\n",
-    "        return out\n",
+    "        return out[0]\n",
     "\n",
     "    def configure_optimizers(self):\n",
     "        optimizer = Adam(self.bert.parameters(), lr=self.lr)\n",
@@ -446,15 +445,14 @@
     "    def training_step(self, batch, _):\n",
     "        ids, mask, labels = batch[\"ids\"], batch[\"mask\"], batch[\"labels\"]\n",
     "        output = self(ids, mask)\n",
-    "        output = output[0]\n",
-    "        loss = self.criterion(output, labels)\n",
+    "        loss = self.criterion(output, labels.long())\n",
     "        self.log(\"train/loss\", loss, prog_bar=True, on_epoch=True, on_step=False)\n",
     "        return loss\n",
     "\n",
     "    def validation_step(self, batch, _):\n",
     "        ids, mask, labels = batch[\"ids\"], batch[\"mask\"], batch[\"labels\"]\n",
     "        output = self(ids, mask)\n",
-    "        loss = self.criterion(output, labels)\n",
+    "        loss = self.criterion(output, labels.long())\n",
     "        f1_score = f1(torch.argmax(output), labels.int(), average=\"macro\", num_classes=self.n_classes)\n",
     "        return {\"loss\": loss, \"f1\": f1_score}\n",
     "\n",
@@ -472,6 +470,7 @@
    "outputs": [],
    "source": [
     "MODEL='microsoft/BiomedNLP-PubMedBERT-base-uncased-abstract-fulltext'\n",
+    "# MODEL='bert-base-uncased'\n",
     "data = DataModule(data_path=r'../data/drugs_train.csv', model_name=MODEL)\n",
     "\n",
     "model = BaseBert(model=MODEL, n_classes=10)\n",
