--- a/notebooks/project.ipynb
+++ b/notebooks/project.ipynb
@@ -282,9 +282,9 @@
     }
    ],
    "source": [
-    "y_pred = pipeline.predict(x)\n",
+    "y_pred = pipeline2.predict(x)\n",
     "print(classification_report(y, y_pred))\n",
-    "y_pred = pipeline.predict(x_test)\n",
+    "y_pred = pipeline2.predict(x_test)\n",
     "print(classification_report(y_test, y_pred))"
    ]
   },
